# trading-prediction-with-machine-learning

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml  requirements.txt
public/: websocket_client.html
public/assets/: style.css
public/js/: app.browser.js
src/: model_trainer.py  predict.py  prediction_service.py
