[project]
name = "trading-prediction-with-machine-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "adrien.parrochia",email = "adrien.parrochia@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "trading-prediction-with-machine-learning", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
